--- a/episode 2/package.json
+++ b/episode 2/package.json
@@ -2,8 +2,9 @@
   "name": "episode-2",
   "version": "1.0.0",
   "description": "Making Custom package",
-  "main": "app.js",
   "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
