--- a/episode 10/package.json
+++ b/episode 10/package.json
@@ -1,7 +1,7 @@
 {
   "name": "episode-10",
   "version": "1.0.8",
-  "description": "Optimization",
+  "description": "Adding Styles",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
@@ -25,7 +25,9 @@
   "homepage": "https://github.com/aditya-narayan-sahoo/my-namaste-react#readme",
   "devDependencies": {
     "parcel": "^2.12.0",
-    "process": "^0.11.10"
+    "postcss": "^8.4.41",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.9"
   },
   "dependencies": {
     "react": "^18.3.1",
