Add Higher Order Component

--- a/episode 11/package.json
+++ b/episode 11/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "episode-10",
-  "version": "1.0.8",
-  "description": "Adding Styles",
+  "name": "episode-11",
+  "version": "1.0.9",
+  "description": "Data modification",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
